Code cleanup - loan product